Stick sidebar, fix issue with content overflow.

--- a/inst/semantic-dashboard.css
+++ b/inst/semantic-dashboard.css
@@ -1,3 +1,20 @@
-.semantic-dashboard {
-  margin: 0;
+body {
+  min-height: unset !important;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 10px 0 10px;
+}
+
+body > .pusher {
+  flex: 1;
+  height: calc(100vh - 45px);
+}
+
+.content > .pusher {
+  height: 100%;
+  overflow: auto;
+}
+
+.ui.menu.sidebar.bottom:not(.visible) {
+  display: none;
 }
